--- a/package.json
+++ b/package.json
@@ -143,5 +143,8 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "grunt-contrib-compress": "^2.0.0"
   }
 }
